--- a/src/admin/templates/newsEditorAdd.tpl.html
+++ b/src/admin/templates/newsEditorAdd.tpl.html
@@ -21,20 +21,20 @@
             <p class="mb-0" id="alert-block-content"><?=implode("<br />", $form->getTextualErrors())?></p>
         </div>
     <? } ?>
-    
+
     <form action="" method="POST">
         <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" />
         <div class="form-group row align-items-center">
             <label for="title" class="col-12 col-sm-2 col-form-label col-form-label-lg">Заголовок</label>
             <div class="col-12 col-sm-10">
-                <input id="title" class="form-control form-control-lg" name="title" value="<?=$form->getDisplayValue('title')?>" type="text">
+                <input id="title" class="form-control form-control-lg" name="title" value="<?=$form->getDisplayValue('title')?>" type="text"<?=($form->get('title')->getMax()?' maxlength="'.$form->get('title')->getMax().'"':'')?>>
             </div>
         </div>
 	
         <div class="form-group row align-items-center">
             <label for="description" class="col-12 col-sm-2 col-form-label col-form-label-lg">Описание</label>
             <div class="col-12 col-sm-10">
-                <input id="description" class="form-control form-control-lg" name="description" value="<?=$form->getDisplayValue('description')?>" type="text">
+                <input id="description" class="form-control form-control-lg" name="description" value="<?=$form->getDisplayValue('description')?>" type="text"<?=($form->get('title')->getMax()?' maxlength="'.$form->get('description')->getMax().'"':'')?>>
             </div>
         </div>
         
