--- a/src/user/templates/serviceCreditPodZalogAvto.tpl.html
+++ b/src/user/templates/serviceCreditPodZalogAvto.tpl.html
@@ -116,10 +116,30 @@
             </div>
         </div>
     </div>
-
-<div id="about" class="container">
     
-</div>
+    <? 
+	if ($newsList) {
+	    $newsCount = count($newsList);
+    ?>
+	<div class="container news-block mb-5">
+	    <h3>Новости</h3>	
+	    <div class="row">
+		<? foreach($newsList as $i => $newsItem) { ?>
+		    <div class="col-12<?=$newsCount > 1?' col-lg-'.($newsCount==3?'4':'6'): ''?>">
+			<h4><a href="<?=CommonUtils::makeUrl('newsItem', array('sid' => $newsItem->getSid()))?>"><?=htmlspecialchars($newsItem->getTitle())?></a></h4>
+			<p><?=htmlspecialchars($newsItem->getDescription())?></p>
+			<hr class="d-lg-none my-4" />
+		    </div>
+		<? } ?>
+	    </div>
+	    <hr class="d-none d-lg-block my-4" />
+	    <div class="row">
+		<div class="col text-right">
+		    <a href="<?=CommonUtils::makeUrl('newsList')?>">все новости</a>
+		</div>
+	    </div>	
+	</div>
+    <? } ?>
     
 </main>
 
