Добавил OpenGraph и Schema.org

--- a/src/user/templates/creditRequestEditorStart.tpl.html
+++ b/src/user/templates/creditRequestEditorStart.tpl.html
@@ -160,7 +160,7 @@ JS);
     <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 text-muted mt-3">
         <p>
             На данном шаге мы просим Вас <strong>указать и подтвердить номер телефона</strong>, что бы мы могли информировать Вас о поступивших предложениях.
-            <strong>Необходимую сумму сумму и Ваши данные</strong> для первоначальной проверки.
+            <strong>Необходимую сумму и Ваши данные</strong> для первоначальной проверки.
         </p>
         <p>На этом все, заявка перейдет к нашим партнерами, а Вы <strong>получите предложения займа</strong>, из которых сможете выбрать подходящее.</p>
     </div>
