--- a/src/user/templates/parts/pageFooter.tpl.html
+++ b/src/user/templates/parts/pageFooter.tpl.html
@@ -7,10 +7,17 @@
                 </div>
             </div>
 			
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 d-flex">
-                <div class="d-flex align-items-center">
-                    <a class="logo-footer pt-3 pb-3" href="/">Финансовый Ресурс</a>	  
+            <div class="col-12 col-lg-4 d-flex justify-content-start justify-content-lg-end">
+                <div class="d-flex flex-column align-self-center">
+                    <div class="mb-4"><a class="logo-footer pt-3 pb-3" href="/">Финансовый Ресурс</a></div>
+		    <div class="text-lg-right mb-4 mb-lg-0">
+			<a href="https://twitter.com/finresurs" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-twitter"></i></a>
+			<a href="https://t.me/FinResursBot" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-telegram-plane"></i></a>
+			<a href="https://zen.yandex.ru/id/5ef0bd83f9d235005f7a8595" target="_blank" class="bg-white text-primary" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-yandex text-center" style="min-width: 21px;"></i></a>
+		    </div>
                 </div>
+
+		
             </div>			
         </div>
     </div>
