--- a/src/admin/templates/main.scss
+++ b/src/admin/templates/main.scss
@@ -1,1 +1,52 @@
 @import "/var/www/credit/src/base/main.scss";
+
+body {
+
+    #related-images, .preview-row {
+
+        .image-cont-placeholder {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-color: whitesmoke;
+            width: block;
+            flex: none;
+            width: 150px;
+            height: 150px;
+            border: 1px dashed lightgray;
+        }
+	
+        .card {
+            background-size: cover;
+            background-repeat: no-repeat;
+            width: block;
+            flex: none;
+            width: 150px;
+            height: 150px;
+            
+            .card-block {
+                display: flex;
+                flex-direction: row;
+                padding: 1rem 0.25rem;
+                background-color: rgba(220,220,220,0.6);
+                visibility: hidden;
+                
+                i.fa {
+                    flex: auto;
+                    display: flex;
+                    justify-content: center;
+                    cursor: pointer;
+                }
+            }
+        }
+            
+        .card:hover {
+            .card-block {
+                visibility: visible;
+            }
+        }
+            
+        @include media-breakpoint-down(sm) {
+            .card .card-block { visibility: visible; }
+        }
+    }
+}
