--- a/src/admin/templates/newsEditorAdd.tpl.html
+++ b/src/admin/templates/newsEditorAdd.tpl.html
@@ -6,7 +6,8 @@
             addMissingLabel('title', 'заголовок не указано')->
             addMissingLabel('description', 'название не указано')->
             addMissingLabel('text', 'название не указано')->
-            addCustomLabel('id', NewsAddCommand::ERROR_DUPLICATE, 'такое название уже есть');
+            addCustomLabel('id', NewsAddCommand::ERROR_DUPLICATE, 'такое название уже есть')->
+            addCustomLabel('id', NewsAddCommand::ERROR_INTERNAL, 'ошибка на сервере');
     }
 ?>
 <!-- Begin page content -->
@@ -24,6 +25,7 @@
 
     <form action="" method="POST">
         <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" />
+	<input type="hidden" name="id" value="" id="object-id" />
         <div class="form-group row align-items-center">
             <label for="title" class="col-12 col-sm-2 col-form-label col-form-label-lg">Заголовок</label>
             <div class="col-12 col-sm-10">
@@ -37,16 +39,34 @@
                 <input id="description" class="form-control form-control-lg" name="description" value="<?=$form->getDisplayValue('description')?>" type="text"<?=($form->get('title')->getMax()?' maxlength="'.$form->get('description')->getMax().'"':'')?>>
             </div>
         </div>
+	
+	<div class="form-group row">
+	    
+            <label for="preview-upload" class="col-12 col-sm-2 col-form-label-lg">Привью</label>
+            <div class="col-12 col-sm-10">
+                <label class="file">
+                    <input type="file" name="file" id="preview-upload" class="form-control-lg form-control-file">
+                    <span class="file-custom"></span>
+                </label>
+            </div>
+	    
+            <div class="offset-sm-2 col-xs-12 col-sm-10 preview-row" style="<?=$preview ? '' : 'display: none;'?>">
+                <div class="card image-cont" id="preview-cont" style="width: 120px; height: 90px;<?=$preview ? ' background-image: url('.$preview.'?ts='.time().');' : ''?>">
+                    <div class="card-block">
+                        <i class="fa fa-lg fa-remove" id="preview-delete" title="удалить изображение" aria-hidden="true"></i><span class="sr-only">удалить изображение</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         
         <div class="form-group row align-items-start">
-            <label for="text" class="col-12 col-sm-2 col-form-label col-form-label-lg">Текст</label>
-            <div class="col-12 col-sm-10 justify-content-between">
-                <textarea id="text" class="form-control form-control-lg" rows="4" name="text"><?=$form->getValue('text')?></textarea>
+            <div class="col-12 justify-content-between">
+                <textarea id="text" class="form-control form-control-lg" rows="15" name="text"><?=$form->getValue('text')?></textarea>
             </div>
         </div>
         
         <div class="form-group row align-items-center">
-            <div class="col-12 offset-sm-2 col-sm-10 d-flex justify-content-between">
+            <div class="col-12 d-flex justify-content-between">
                 <button type="submit" class="btn btn-lg btn-success mr-2 mb-2">создать</button>
                 <button type="submit" name="cancel" class="btn btn-link mb-2">отменить</button>
             </div>
