--- a/src/user/templates/main.tpl.html
+++ b/src/user/templates/main.tpl.html
@@ -208,6 +208,74 @@
     
 </div>
     
+    <div id="about-us" class="container">
+	<div class="row bg">
+	    <div class="col-12">
+		<h3>Кредитный брокер-Ваша гарантия в получении кредита</h3>
+		<p>Наш сервис предлагает быстро оформить займ под залог с минимальным пакетом документов. Вы можете получить необходимую сумму наличными или переводом на свою карту под самый низкий процент, какой только существует.</p>
+		<p>Кредитный брокер помогает в оформлении займа на выгодных условиях, повышает шансы на одобрение, сопровождает процесс сделки.</p>
+		<h3>Наши преимущества</h3>
+		<p>Оптимальная автоматизированная система взаимодействия с клиентом позволяет нашим специалистам в круглосуточном режиме принимать и обрабатывать заявки.</p>
+		<p>Индивидуальный подход обеспечивает подбор тех банковских продуктов, которые подойдут именно Вам.</p>
+		<p>Кредитный брокер - это:</p>
+		<ul>
+		    <li>всего одна заявка;</li>
+		    <li>анализ сотен предложений;</li>
+		    <li>подбор лучших вариантов.</li>
+		</ul>
+
+		<h3>Масса возможностей</h3>
+		<p>Нами отлажены эффективные механизмы по подбору кредитных программ для населения, благодаря чему Вы сможете оформить кредит под залог через брокера с максимальной выгодой для себя.</p>
+
+		<p>Мы найдём способы получения кредита под залог, если:</p>
+
+
+		<ul>
+		    <li>банки отказали в займе;</li>
+		    <li>деньги нужны срочно;</li>
+		    <li>есть открытые просрочки;</li>
+		    <li>плохая кредитная история.</li>
+		</ul>
+
+		<h3>Как это работает.</h3>
+    
+		<p>Кредитный брокер всегда в курсе лучших предложений и выгодных программ банков, кредитных организаций, частных кредиторов. Мы поможем найти самые выгодные предложения с высокими шансами на одобрение.</p>
+		<p>Отправляя одну онлайн-заявку, Вы получаете сразу несколько предложений от наших проверенных партнёров, и выбираете лучшее для себя.</p>
+
+		<ol>
+		    <li>Разместите заявку на сайте с заполнением полей контактной формы.</li>
+		    <li>Укажите предмет залога.</li>
+		    <li>Партнёры, проверив и уточнив Ваши данные, примут предварительное решение.</li>
+		    <li>Дождитесь предложений от партнёров.</li>
+		    <li>Выберите самое выгодное предложение.</li>
+		    <li>Получите деньги в офисе кредитной организации.</li>
+		</ol>
+		    
+		<p>Услуги кредитного брокера-удобный вариант для тех, кто хочет получить займ под залог с наилучшими условиями и минимальными затратами времени.</p>
+
+		<h3>Пять причин работать с нами:</h3>
+		
+		<ol>
+		    <li>подберём наилучший вариант;</li>
+		    <li>сделаем в разы быстрее;</li>
+		    <li>сэкономим Ваши деньги;</li>
+		    <li>увеличим шансы;</li>
+		    <li>гарантируем безопасность.</li>
+		</ol>
+
+		<p>Кредитный брокер - выгодно, оперативно, с гарантией.</p>
+	    </div>
+	</div>
+	
+        
+        <div class="row">
+            <div class="col-12 text-center">
+                <a class="btn btn-priem btn-yellow btn-lg" href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" role="button">подать заявку</a>
+            </div>
+        </div>
+	
+    </div>
+    
     <? 
 	if ($newsList) {
 	    $newsCount = count($newsList);
