--- a/src/user/templates/serviceCreditPodZalogAvto.tpl.html
+++ b/src/user/templates/serviceCreditPodZalogAvto.tpl.html
@@ -127,6 +127,61 @@
         </div>
     </div>
     
+    <div class="container my-5">
+	<h3>Кредит под залог авто - оперативно, без прохождения формальных процедур</h3>
+    
+	<p>Срочно нужны деньги? У нас Вы можете получить их в течение одного дня! Теперь существует реальная возможность быстро оформить кредит под залог авто с минимальным пакетом документов.</p>
+
+	<h3>Почему это выгодно:</h3>
+
+	<ul>
+	    <li>без справки о доходах;</li>
+	    <li>без поручителя;</li>
+	    <li>без бюрократических формальностей;</li>
+	    <li>без переоформления права собственности на авто;</li>
+	    <li>без отчёта о целевом использовании заёмных средств;</li>
+	    <li>без бумажной волокиты;</li>
+	    <li>без лишних вопросов.</li>
+	</ul>
+
+	<p>Мы - надежный сервис для получения быстрых кредитов. Для нас нет ничего невозможного.</p>
+
+	<p>Вы получите кредит под залог авто независимо от:</p>
+
+	<ul>
+	    <li>текущих кредитов;</li>
+	    <li>фактических просрочек;</li>
+	    <li>кредитной истории;</li>
+	    <li>места работы;</li>
+	    <li>заработной платы.</li>
+	</ul>
+
+	<p>Оформить кредит и получить деньги под залог авто можно быстро и просто. Отправив одну заявку, Вы мгновенно получаете несколько кредитных предложений и выбираете подходящее. Это просто, удобно, доступно!</p>
+
+	<p>Мы работаем только с проверенными банками, микрофинансовыми компаниями и частными инвесторами.</p>
+
+	<p>Вы получите предложения от наших партнёров с учётом:</p>
+
+	<ul>
+	    <li>лучших условий на рынке;</li>
+	    <li>объективной оценки автомобиля;</li>
+	    <li>высокой вероятности одобрения.</li>
+	</ul>
+	
+	<h3>Как это работает</h3>
+
+	<ol>
+	    <li>Заполните заявку. Укажите максимально полную и корректную информацию. Помните, что наши партнёры воспользуются предоставленными данными.</li>
+	    <li>Мы отправляем заявку в кредитные учреждения с самыми выгодными предложениями и высокими шансами на одобрение.</li>
+	    <li>Наши партнёры рассматривают заявку, проверяют и уточняют данные. При необходимости, задают дополнительные вопросы, способствующие принятию положительного решения.</li>
+	    <li>Необходимые нюансы согласовываются в телефонном режиме.</li>
+	    <li>Вам приходят лучшие кредитные предложения от наших постоянных партнёров.</li>
+	    <li>После выбора наиболее выгодного предложения Вы получаете кредитные средства.</li>
+	</ol>
+
+	<p>Мы имеем значительный опыт работы с крупнейшими банковскими организациями и налаженную схему сотрудничества, поэтому наши услуги эффективны и безопасны.</p>
+    </div>
+    
     <? 
 	if ($newsList) {
 	    $newsCount = count($newsList);
