Добавил группу ВК

--- a/src/user/templates/parts/pageFooter.tpl.html
+++ b/src/user/templates/parts/pageFooter.tpl.html
@@ -11,9 +11,10 @@
                 <div class="d-flex flex-column align-self-center">
                     <div class="mb-4"><a class="logo-footer pt-3 pb-3" href="/">Финансовый Ресурс</a></div>
 		    <div class="text-lg-right mb-4 mb-lg-0">
-			<a href="https://twitter.com/finresurs" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-twitter"></i></a>
-			<a href="https://t.me/FinResursBot" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-telegram-plane"></i></a>
-			<a href="https://zen.yandex.ru/id/5ef0bd83f9d235005f7a8595" target="_blank" class="bg-white text-primary" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-yandex text-center" style="min-width: 21px;"></i></a>
+			<a href="https://twitter.com/finresurs" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-twitter text-center" style="min-width: 22px;"></i></a>
+			<a href="https://vk.com/finresursonline" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-vk text-center" style="min-width: 22px;"></i></a>
+			<a href="https://t.me/FinResursBot" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-telegram-plane text-center" style="min-width: 22px;"></i></a>
+			<a href="https://zen.yandex.ru/id/5ef0bd83f9d235005f7a8595" target="_blank" class="bg-white text-primary" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-yandex text-center" style="min-width: 22px;"></i></a>
 		    </div>
                 </div>
 
