Добавил Description для списка новостей

--- a/src/user/templates/newsList.tpl.html
+++ b/src/user/templates/newsList.tpl.html
@@ -1,5 +1,6 @@
 <? 
     Singleton::getInstance('HTMLMetaManager')->
+    	setDescription(htmlspecialchars('Важные и актуальные новости из мира кредитования и финансов.'))->
 	setTitle('Список новостей - Финансовый Ресурс');
 
     $partViewer->view('parts/header'); 
