--- a/src/user/templates/parts/pageFooter.tpl.html
+++ b/src/user/templates/parts/pageFooter.tpl.html
@@ -11,6 +11,7 @@
                 <div class="d-flex flex-column align-self-center">
                     <div class="mb-4"><a class="logo-footer pt-3 pb-3" href="/">Финансовый Ресурс</a></div>
 		    <div class="text-lg-right mb-4 mb-lg-0">
+			<a href="https://www.facebook.com/%D0%A4%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2%D1%8B%D0%B9-%D0%A0%D0%B5%D1%81%D1%83%D1%80%D1%81-110787490727370/" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fa fa-facebook text-center" style="min-width: 22px;"></i></a>
 			<a href="https://twitter.com/finresurs" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-twitter text-center" style="min-width: 22px;"></i></a>
 			<a href="https://vk.com/finresursonline" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-vk text-center" style="min-width: 22px;"></i></a>
 			<a href="https://t.me/FinResursBot" target="_blank" class="bg-white text-primary mr-2" style="padding: 0.6rem; font-size: 1.3rem; border-radius: 50%;"><i class="fab fa-telegram-plane text-center" style="min-width: 22px;"></i></a>
